--- a/packages/proto/public/styles/page.css
+++ b/packages/proto/public/styles/page.css
@@ -27,6 +27,28 @@ img {
   }
 }
 
+header {
+  display: flex;
+  align-items: center; /* Align items vertically in the center */
+  justify-content: space-between; /* Distribute items with space between */
+  width: 100%;
+  padding: var(--size-spacing-medium);
+  background-color: var(--color-background-header);
+  color: var(--color-text-inverted);
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+/* Ensure heading and paragraph are on the same line */
+header > h1 {
+  margin-right: 20px; /* Add space between heading and paragraph */
+}
+
+header > p {
+  margin-left: 0;
+  flex-grow: 1; /* Allow the paragraph to take available space */
+}
+
 header a {
   color: var(--color-link-inverted);
 }
@@ -198,4 +220,18 @@ svg.icon {
 .overlay-box h2 {
   color: #000000; /* New color for the text */
   font-family: var(--font-family-poetsen);
+}
+
+body.dark-mode {
+  --color-background-page: rgb(217, 154, 95);
+  --color-text: rgb(240, 240, 223);
+  --color-background-card: black;
+  --color-accent: rgba(173, 84, 0);
+  --color-background-header: var(--color-accent);
+  --color-text-control: rgb(51 51 51);
+  --color-text-control-inverted: var(--color-background-page);
+}
+
+body.dark-mode .overlay-box:nth-child(2) {
+  background-color: rgba(173, 84, 0); /* Dark mode background */
 }
